--- a/Styles/tweak.mustache
+++ b/Styles/tweak.mustache
@@ -10,16 +10,16 @@
     <meta name="description" content="A package by {{tweak_developer}} for {{tweak_compatibility}}.">
     <meta property="og:title" content="{{tweak_name}}">
     <meta property="og:description" content="A package by {{tweak_developer}} for {{tweak_compatibility}}.">
-    <meta property="og:image" content="../../assets/{{tweak_bundle_id}}/banner.png">
+    <meta property="og:image" content="../../assets/{{tweak_bundle_id}}/1.png">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="{{tweak_name}}">
     <meta name="twitter:description" content="A package by {{tweak_developer}} for {{tweak_compatibility}}.">
-    <meta name="twitter:image" content="https://{{repo_url}}/assets/{{tweak_bundle_id}}/banner.png">
+    <meta name="twitter:image" content="https://{{repo_url}}/assets/{{tweak_bundle_id}}/1.png">
     <meta name="theme-color" content="{{tint_color}}">
 </head>
 <body>
     <div class="body">
-        <div style="background-image: url(../../assets/{{tweak_bundle_id}}/banner.png)" class="banner_underlay"></div>
+        <div style="background-image: url(../../assets/{{tweak_bundle_id}}/1.png)" class="banner_underlay"></div>
         <div class="package package_head">
             <img src="../../assets/{{tweak_bundle_id}}/icon.png">
             <div class="package_info">
