--- a/Styles/tweak.mustache
+++ b/Styles/tweak.mustache
@@ -14,7 +14,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="{{tweak_name}}">
     <meta name="twitter:description" content="A package by {{tweak_developer}} for {{tweak_compatibility}}.">
-    <meta name="twitter:image" content="https://{{repo_url}}/assets/{{tweak_bundle_id}}/1.png">
+    <meta name="twitter:image" content="https://{{repo_url}}/assets/{{tweak_bundle_id}}/banner.png">
     <meta name="theme-color" content="{{tint_color}}">
 </head>
 <body>
